# iit-inail-drill-ros-pkg

./: .gitignore  CMakeLists.txt  README.md
inail_drill_urdf/: CMakeLists.txt  package.xml
inail_drill_urdf/launch/: drill_slider.launch
inail_drill_urdf/meshes/: drill_base_simple.stl  drill_chuck.stl  drill_chuck_simple.stl
inail_drill_urdf/rviz/: inail_drill.rviz
inail_drill_urdf/urdf/: inail_drill.urdf.xacro  inail_drill_macro.urdf.xacro
